My proposal has been completed. Need to work on the white version and ideas with Sara

--- a/sara/index.html
+++ b/sara/index.html
@@ -17,7 +17,7 @@
   <body>
   <div id="wrapper">
     <div class="menu center hide-for-medium-up">
-      <input class="menuB" type="image" src="img/menuB.png"></input>
+      <input class="menuB" type="image" src="img/menu-B.png"></input>
         <nav class="row center"> 
           <div class="medium-2 medium-offset-1 columns center prl16"><a href="#home" class="menu">Inicio</a></div>
           <div class="medium-2 columns center prl16"><a href="#edu" class="menu">Educaci&oacute;n</a></div>
@@ -27,12 +27,21 @@
         </nav>
     </div>
     <div class="row">
-      <section id="home" class="medium-9 small-12 columns">
+      <section id="home" class="large-10 medium-9 small-12 columns">
         <div class="intro">
           <h1 class="title">Sara Mui&ntilde;o Murga</h1>
           <h2 class="title">Maestra en Arquitectura y Nuevo Urbanismo</h2>
           <h2 class="title">Coordinadora de Proyectos Habitacionales</h2>
           <h2 class="title">Arquitecta</h2>
+        </div>
+        <div class="row pt32">
+            <div class="large-centered medium-6 medium-uncentered small-10 small-centered columns center">
+              <button class="download" data-reveal-id="myModal">Descargar mi CV</button>
+            </div>
+            <div id="myModal" class="reveal-modal medium" data-reveal>
+              <iframe width="100%" height="600" src="CV.pdf" frameborder="0" allowfullscreen></iframe>
+              <a class="close-reveal-modal">&#215;</a>
+            </div>
         </div>
       </section>
 
@@ -48,6 +57,13 @@
                 <p>Arquitectura y Nuevo Urbanismo</p>
                 <p><b>ITESM</b> Campus Quer&eacute;taro</p>
                 <p>agosto 2010 - julio 2012</p>
+                <ul>
+                  <li>Asistente de Direcci&oacute;n de Arquitectura.</li>
+                  <li>Atenci&oacute;n a alumnos.</li>
+                  <li>Coordinaci&oacute;n y asignaci&oacute;n de actividades becarios.</li>
+                  <li>Apoyo en la organizaci&oacute;n de actividades culturales y deportivas de la carrera de Arquitectura.</li>
+                  <li><b>C&eacute;dula profesional : 7993674.</b></li>
+                </ul>
               </div>
             </div>
             <div class="row collapse last-title">
@@ -58,6 +74,15 @@
                 <p>Arquitectura</p>
                 <p><b>ITESM</b> Campus Quer&eacute;taro</p>
                 <p>agosto 1995 - mayo 2000</p>
+                <ul>
+                  <li>Menci&oacute;n honor&iacute;fica.</li>
+                  <li>Primer lugar en proyecto de fin de carrera (mayo 2000).</li>
+                  <li>Tercer lugar en concurso “Torre de Cub&iacute;culos” (1998).</li>
+                  <li>Curso de dibujo e Historia de la Arquitectura (Universidad de Navarra, Espa&ntilde;a, 1998).</li>
+                  <li>Colaboraci&oacute;n en federaciones de estudiantes (1998 – 1999).</li>
+                  <li>Colaboraci&oacute;n en el Tercer Congreso Internacional de Arquitectura del Campus (1999).</li>
+                  <li><b>C&eacute;dula profesional : 3312660.</b></li>
+                </ul>
               </div>
             </div>
           </div>
@@ -66,15 +91,189 @@
 
       <section id="skills" class="medium-9 small-12 columns">
         <h2 class="title">Habilidades</h2>
-        <div class="row content">
-          
+        <div class="row collapse content">
+          <ul>
+            <li>Experta en coordinaci&oacute;n de equipos de trabajo.</li>
+            <li>Habilidad para trabajar en equipos multidisciplinarios.</li>
+            <li>Met&oacute;dica y meticulosa al momento de establecer la planeaci&oacute;n de un proyecto.</li>
+            <li>Gran capacidad para definir rutas y etapas cr&iacute;ticas.</li>
+            <li>Alta atenci&oacute;n al detalle.</li>
+            <li>Experta en Autocad.</li>
+            <li>Experta en lotificaciones y proyectos de casa habitaci&oacute;n.</li>
+            <li>Usuaria intermedia en Google SketchUp y Google Earth.</li>
+            <li>Ingl&eacute;s nivel conversaci&oacute;n de negocios. Certificaci&oacute;n TOEFL.</li>
+          </ul>
         </div>
       </section>
 
       <section id="exp" class="medium-9 small-12 columns">
         <h2 class="title">Experiencia</h2>
-        <div class="row content">
-          
+        <div class="row collapse content">
+          <div class="row">
+              <div class="medium-6 small-12 columns">
+                <h3><i>2008 - 2010</i></h3>
+                <h2>Flores y V&aacute;zquez arquitectos</h2>
+                <h3>Coordinadora del Departamento de Proyectos</h3>
+              </div>
+              <div class="medium-6 small-11 columns">
+                <h3>Actividades realizadas</h3>
+                  <ul>
+                    <li>Dise&ntilde;o, coordinaci&oacute;n y elaboraci&oacute;n de proyectos ejecutivos: de vivienda econ&oacute;mica, inter&eacute;s social, inter&eacute;s medio y residencial, lotificaciones y proyectos de fraccionamientos y condominios.</li>
+                    <li>Coordinaci&oacute;n y elaboraci&oacute;n de planos para tramitolog&iacute;a.</li>
+                    <li>Coordinaci&oacute;n de proyectos estructurales y presentaciones de perspectivas.</li>
+                    <li>Planeaci&oacute;n y coordinaci&oacute;n general del departamento de proyectos.</li>
+                  </ul>
+              </div>
+            </div>
+            <div class="row">
+              <div class="medium-6 small-12 columns">
+                <h4><i>2006 - 2008</i></h4>
+                <h2>S_Arquitectura</h2>
+                <h3>Profesional Independiente</h3>
+              </div>
+              <div class="medium-6 small-11 columns">
+                <h3>Actividades realizadas</h3>
+                  <ul>
+                    <li>Dise&ntilde;o y elaboraci&oacute;n de proyecto ejecutivo de Cafeter&iacute;a K'Puchinos (Tequisquiapan, Quer&eacute;taro).</li>
+                    <li>Elaboraci&oacute;n de proyectos ejecutivos de vivienda:
+                      <ul>
+                        <li>Prototipo P58 (Fraccionamiento Loarca Castillo, Quer&eacute;taro).</li>
+                      </ul>
+                    </li>
+                    <li>Elaboraci&oacute;n de proyectos ejecutivos de condominios en:
+                      <ul>
+                        <li>Fraccionamiento Puertas de San Miguel.</li>
+                        <li>Fraccionamiento Ciruelos.</li>
+                        <li>Fraccionamiento Loma VIII.</li>
+                        <li>Fraccionamiento Hacienda del Parque.</li>
+                        <li>Fraccionamiento Los H&eacute;roes Quer&eacute;taro.</li>
+                      </ul>
+                    </li>
+                    <li>Elaboraci&oacute;n de planos para tramitolog&iacute;a:
+                      <ul>
+                        <li>Grupo Frame, S.A. DE C.V.</li>
+                        <li>Fraccionamiento Mediterr&aacute;neo.</li>
+                        <li>Fraccionamiento Los H&eacute;roes Quer&eacute;taro.</li>
+                      </ul>
+                    </li>
+                    <li>Elaboraci&oacute;n y participaci&oacute;n en proyectos ejecutivos de Centros de Venta en:
+                      <ul>
+                        <li>Fraccionamiento Hacienda del Parque.</li>
+                        <li>Fraccionamiento Rancho Bellavista.</li>
+                      </ul>
+                    </li>
+                    <li>Participaci&oacute;n en el dise&ntilde;o y elaboraci&oacute;n de proyecto ejecutivo de &aacute;reas verdes en:
+                      <ul>
+                        <li>Fraccionamiento Paseos del Bosque.</li>
+                        <li>Fraccionamiento Loma VIII.</li>
+                      </ul>
+                    </li>
+                  </ul>
+              </div>
+            </div>
+            <div class="row">
+              <div class="medium-6 small-12 columns">
+                <h4><i>2002 - 2006</i></h4>
+                <h2>PULTE M&Eacute;XICO DIVISI&Oacute;N CENTRO SUR S. DE R.L. DE C.V.</h2> 
+                <h2>ALTTA HOMES S. DE R.L. DE C.V.</h2>
+                <h3>Proyectista</h3>
+              </div>
+              <div class="medium-6 small-11 columns">
+                <h3>Actividades realizadas</h3>
+                  <ul>
+                    <li>Dise&ntilde;o, coordinaci&oacute;n interna y externa en la realizaci&oacute;n de proyectos ejecutivos de lotificaci&oacute;n de terrenos y para construcci&oacute;n de vivienda en fraccionamientos de inter&eacute;s social, inter&eacute;s medio y residencial (Quer&eacute;taro):
+                      <ul>
+                        <li>Fraccionamiento Los Cipreses.</li>
+                        <li>Fraccionamientos La Loma VI, VII, VIII y IX.</li>
+                        <li>Fraccionamientos Monteblanco II y III.</li>
+                        <li>Prototipo San Felipe.</li>
+                        <li>Prototipo San Miguel.</li>
+                        <li>Prototipo San Pedrito.</li>
+                        <li>Prototipo San Diego.</li>
+                        <li>Prototipo San Julio.</li>
+                        <li>Prototipo Monteblanco II.</li>
+                        <li>Prototipo Monteblanco III.</li>
+                      </ul>
+                    </li>
+                    <li>Mercadotecnia
+                      <ul>
+                        <li>Coordinaci&oacute;n y supervisi&oacute;n de mantenimiento general de Centros de Venta con base a los lineamientos de la empresa.</li>
+                      </ul>
+                    </li>
+                    <li>Calidad
+                      <ul>
+                        <li>Participaci&oacute;n en el proceso de certificaci&oacute;n ISO 9000.</li>
+                        <li>Auditor interno.</li>
+                      </ul>
+                    </li>
+                  </ul>
+              </div>
+            </div>
+            <div class="row">
+              <div class="medium-6 small-12 columns">
+                <h4><i>2001 - 2002</i></h4>
+                <h2>DRT PULTE S. DE R.L. DE C.V.</h2> 
+                <h3>Asistente de Proyectista</h3>
+              </div>
+              <div class="medium-6 small-11 columns">
+                <h3>Actividades realizadas</h3>
+                  <ul>
+                    <li>Participaci&oacute;n en la realizaci&oacute;n de proyectos ejecutivos para construcci&oacute;n de vivienda en fraccionamientos de inter&eacute;s social, inter&eacute;s medio y residencial (Quer&eacute;taro):
+                      <ul>
+                        <li>Fraccionamiento Los Robles.</li>
+                        <li>Fraccionamiento Los Cipreses.</li>
+                        <li>Fraccionamiento Monteblanco I.</li>
+                        <li>Fraccionamientos La Loma IV y V.</li>
+                        <li>Prototipo San Joaqui&iacute;n.</li>
+                        <li>Prototipo San Felipe.</li>
+                        <li>Prototipo Monteblanco I.</li>
+                      </ul>
+                    </li>
+                  </ul>
+              </div>
+            </div>
+            <div class="row">
+              <div class="medium-6 small-12 columns">
+                <h4><i>2001</i></h4>
+                <h2>Grupo Ken</h2> 
+                <h3>Proyectista</h3>
+              </div>
+              <div class="medium-6 small-11 columns">
+                <h3>Actividades realizadas</h3>
+                  <ul>
+                    <li>Participaci&oacute;n en la realizaci&oacute;n de proyectos ejecutivos para construcci&oacute;n industrial</li>
+                  </ul>
+              </div>
+            </div>
+            <div class="row">
+              <div class="medium-6 small-12 columns">
+                <h4><i>2000</i></h4>
+                <h2>FRANCISCO MANGADO Y ASOCIADOS, S.L.</h2>
+                <h3>Pamplona, Navarra (Espa&ntilde;a)</h3> 
+                <h3>Asistente T&eacute;cnico</h3>
+              </div>
+              <div class="medium-6 small-11 columns">
+                <h3>Actividades realizadas</h3>
+                  <ul>
+                    <li>Participaci&oacute;n en la realizaci&oacute;n de proyecto ejecutivo:
+                      <ul>
+                        <li>Palacio de Congresos de Navarra (Pamplona).</li>
+                        <li>Plaza de Felipe II (Madrid).</li>
+                        <li>Museo de Arqueolog&iacute;a de &Aacute;lava (Vitoria).</li>
+                      </ul>
+                    </li>
+                    <li>Participaci&oacute;n en la realizaci&oacute;n de proyectos para concursos:
+                      <ul>
+                        <li>Casa de cultura (Fuenterrab&iacute;a).</li>
+                        <li>Centro deportivo de Alcobendas (Madrid).</li>
+                        <li>Reconversi&oacute;n del Teatro Fleta de Zaragoza en Teatro de &Oacute;pera (Zaragoza).</li>
+                        <li>Palacio de Congresos (Palencia).</li>
+                        <li>Comandancia Naval (San Sebasti&aacute;n).</li>
+                      </ul>
+                    </li>
+                  </ul>
+              </div>
+            </div>
         </div>
       </section>
 
@@ -123,7 +322,7 @@
         </div>
       </footer>
 
-      <aside class="medium-3 hide-for-small columns center">
+      <aside class="large-2 medium-3 hide-for-small columns center">
         <div class="medium-12 columns home"><a href="#home">Inicio</a></div>
         <div class="medium-12 columns edu"><a href="#edu">Educaci&oacute;n</a></div>
         <div class="medium-12 columns skills"><a href="#skills">Habilidades</a></div>
