Changes. Contact form working

--- a/sara/index.html
+++ b/sara/index.html
@@ -337,6 +337,7 @@
     <script type='text/javascript' src="js/vendor/jquery.js"></script>
     <script type='text/javascript' src="js/foundation.min.js"></script>
     <script type='text/javascript' src="js/scripts.js"></script>
+    <script type='text/javascript' src="js/validate.js"></script>
     <script type='text/javascript' src="https://www.google.com/recaptcha/api.js?hl=es"></script>
   </body>
 </html>
