--- a/sara/index.html
+++ b/sara/index.html
@@ -45,7 +45,7 @@
         </div>
       </section>
 
-      <section id="edu" class="medium-9 small-12 columns">
+      <section id="edu" class="large-10 medium-9 small-12 columns">
         <h2 class="title">Educaci&oacute;n</h2>
         <div class="row collapse content">
           <div class="large-10 large-offset-2 medium-12 small-12 columns">
@@ -89,7 +89,7 @@
         </div>
       </section>
 
-      <section id="skills" class="medium-9 small-12 columns">
+      <section id="skills" class="large-10 medium-9 small-12 columns">
         <h2 class="title">Habilidades</h2>
         <div class="row collapse content">
           <ul>
@@ -106,7 +106,7 @@
         </div>
       </section>
 
-      <section id="exp" class="medium-9 small-12 columns">
+      <section id="exp" class="large-10 medium-9 small-12 columns">
         <h2 class="title">Experiencia</h2>
         <div class="row collapse content">
           <div class="row">
@@ -277,7 +277,7 @@
         </div>
       </section>
 
-      <section id="contact" class="medium-9 small-12 columns">
+      <section id="contact" class="large-10 medium-9 small-12 columns">
         <h2 class="title">Contacto</h2>
           <div class="medium-9 small-12 columns">
             <form data-abide class="cmxform" id="commentForm" method="post" action="verify.php" novalidate="novalidate">
