--- a/sara/index.html
+++ b/sara/index.html
@@ -279,7 +279,7 @@
 
       <section id="contact" class="large-10 medium-9 small-12 columns">
         <h2 class="title">Contacto</h2>
-          <div class="medium-9 small-12 columns">
+          <div class="medium-6 small-12 columns">
             <form data-abide class="cmxform" id="commentForm" method="post" action="verify.php" novalidate="novalidate">
               <div class="name-field">
                 <label>Tu nombre
@@ -314,9 +314,12 @@
               <button class="success submit" type="submit">Enviar</button>
             </form>
           </div>
+          <div class="medium-6 small-12 columns">
+            
+          </div>
       </section>
 
-      <footer class="medium-9 small-12 columns columns">
+      <footer class="large-10 medium-9 small-12 columns columns">
         <div class="large-10-centered columns center">
           <p>Copyright &copy;2015. <a href="#home">muino.net</a></p>
         </div>
