--- a/sara/index.html
+++ b/sara/index.html
@@ -34,7 +34,7 @@
           <h2 class="title">Coordinadora de Proyectos Habitacionales</h2>
           <h2 class="title">Arquitecta</h2>
         </div>
-        <div class="row pt32">
+        <div class="row hide-for-small pt32">
             <div class="large-centered medium-6 medium-uncentered small-10 small-centered columns center">
               <button class="download" data-reveal-id="myModal">Descargar mi CV</button>
             </div>
@@ -285,19 +285,19 @@
                 <label>Tu nombre
                   <input type="text" name="name" required pattern="[a-zA-Z]+">
                 </label>
-                <small class="error">Necesitamos tu nombre para saber qui&eacute;n eres</small>
+                <small class="error">Necesito un nombre para saber a quien dirigirme.</small>
               </div>
               <div class="email-field">
                 <label>Correo electr&oacute;nico
                   <input type="email" name="email" required>
                 </label>
-                <small class="error">Direcci&oacute;n de correo electr&oacute;nico no v&aacute;lida</small>
+                <small class="error">Direcci&oacute;n de correo electr&oacute;nico no v&aacute;lida.</small>
               </div>
               <div class="comment-field">
                 <label>Tus comentarios
                   <textarea type="text" name="comment" required pattern="[a-zA-Z]+"></textarea>
                 </label>
-                <small class="error">D&eacute;janos un comentario.</small>
+                <small class="error">Por favor deja un comentario.</small>
               </div>
               <p class="noCaptcha">
                 <label for="captcha">¿Eres humano?</label>
