--- a/sara/index.html
+++ b/sara/index.html
@@ -301,7 +301,7 @@
               </div>
               <p class="noCaptcha">
                 <label for="captcha">¿Eres humano?</label>
-                  <div class="g-recaptcha" data-sitekey="6LexvwITAAAAAN9TkOYnlVQo1uggUNnhR8a-mngD" data-callback="onValidate" data-theme="dark"></div>
+                  <div class="g-recaptcha" data-sitekey="6LexvwITAAAAAN9TkOYnlVQo1uggUNnhR8a-mngD" data-callback="onValidate"></div>
               </p>
               <script>
                 onValidate = function ()
