--- a/sara/index.html
+++ b/sara/index.html
@@ -47,7 +47,7 @@
 
       <section id="edu" class="large-10 medium-9 small-12 columns">
         <h2 class="title">Educaci&oacute;n</h2>
-        <div class="row collapse content">
+        <div class="row content">
           <div class="large-10 large-offset-2 medium-12 small-12 columns">
             <div class="row collapse">
               <div class="medium-6 small-12 columns">
