--- a/sara/index.html
+++ b/sara/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Demo single page by Mikerai &copy;" />
-    <title>Sara Mui&ntilde;o Murga</title>
+    <title>Arq. Sara Mui&ntilde;o Murga</title>
     
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/style.css">
