--- a/sara/index.html
+++ b/sara/index.html
@@ -4,7 +4,7 @@
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Demo single page by Mikerai &copy;" />
+    <meta name="description" content="Arquitecta, Maestra en Arquitectura y Nuevo Urbanismo y Coordinadora de Proyectos Habitacionales Sara Mui&ntilde:o Murga." />
     <title>Arq. Sara Mui&ntilde;o Murga</title>
     
     <link rel="stylesheet" href="css/foundation.css" />
