--- a/sara/index.html
+++ b/sara/index.html
@@ -35,7 +35,7 @@
           <h2 class="title">Arquitecta</h2>
         </div>
         <div class="row hide-for-small pt32">
-            <div class="large-centered medium-6 medium-uncentered small-10 small-centered columns center">
+            <div class="download-container medium-12 small-10 small-centered columns">
               <button class="download" data-reveal-id="myModal">Descargar mi CV</button>
             </div>
             <div id="myModal" class="reveal-modal medium" data-reveal>
@@ -47,9 +47,9 @@
 
       <section id="edu" class="large-10 medium-9 small-12 columns">
         <h2 class="title">Educaci&oacute;n</h2>
-        <div class="row content">
+        <div class="row collapse content">
           <div class="large-10 large-offset-2 medium-12 small-12 columns">
-            <div class="row collapse">
+            <div class="row pb16">
               <div class="medium-6 small-12 columns">
                 <h2>Maestr&iacute;a</h2>
               </div>
@@ -66,7 +66,7 @@
                 </ul>
               </div>
             </div>
-            <div class="row collapse last-title">
+            <div class="row last-title">
               <div class="medium-6 small-11 columns">
                 <h2>Licenciatura</h2>
               </div>
