added Google analytics

--- a/sara/index.html
+++ b/sara/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
-    <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
+    <meta name="ROBOTS" content="INDEX, FOLLOW">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Arquitecta, Maestra en Arquitectura y Nuevo Urbanismo y Coordinadora de Proyectos Habitacionales Sara Mui&ntilde:o Murga." />
@@ -342,5 +342,14 @@
     <script type='text/javascript' src="js/scripts.js"></script>
     <script type='text/javascript' src="js/validate.js"></script>
     <script type='text/javascript' src="https://www.google.com/recaptcha/api.js?hl=es"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-49096652-2', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
