--- a/sara/index.html
+++ b/sara/index.html
@@ -28,6 +28,9 @@
     </div>
     <div class="row">
       <section id="home" class="large-10 medium-9 small-12 columns">
+        <div class="row sw hide-for-small">
+          <button class="switch">Swap color</button>
+        </div>
         <div class="intro">
           <h1 class="title">Sara Mui&ntilde;o Murga</h1>
           <h2 class="title">Maestra en Arquitectura y Nuevo Urbanismo</h2>
@@ -338,7 +341,8 @@
   </div>
     
     <script type='text/javascript' src="js/vendor/jquery.js"></script>
-    <script type='text/javascript' src="js/foundation.min.js"></script>
+    <script type='text/javascript' src="js/foundation.js"></script>
+    <script type='text/javascript' src="js/foundation.reveal.js"></script>
     <script type='text/javascript' src="js/scripts.js"></script>
     <script type='text/javascript' src="js/validate.js"></script>
     <script type='text/javascript' src="https://www.google.com/recaptcha/api.js?hl=es"></script>
