--- a/sara/index.html
+++ b/sara/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Arquitecta, Maestra en Arquitectura y Nuevo Urbanismo y Coordinadora de Proyectos Habitacionales Sara Mui&ntilde:o Murga." />
     <title>Arq. Sara Mui&ntilde;o Murga</title>
-    
-    <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" href="css/style.css">
+  
+    <link rel="stylesheet" href="css/s.css">
     <style>.fancybox-lock{overflow: visible !important;}</style>
 
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
@@ -323,7 +322,7 @@
 
       <section id="contact" class="large-10 medium-9 small-12 columns">
         <h2 class="title">Contacto</h2>
-          <div class="medium-6 small-12 columns">
+          <div class="medium-6 small-12 columns contact-me">
             <form data-abide class="cmxform" id="commentForm" method="post" action="verify.php" novalidate="novalidate">
               <div class="name-field">
                 <label>Tu nombre
@@ -343,10 +342,6 @@
                 </label>
                 <small class="error">Por favor deja un comentario.</small>
               </div>
-              <p class="noCaptcha">
-                <label for="captcha">¿Eres humano?</label>
-                  <div class="g-recaptcha" data-sitekey="6LexvwITAAAAAN9TkOYnlVQo1uggUNnhR8a-mngD" data-callback="onValidate"></div>
-              </p>
               <script>
                 onValidate = function ()
                   {
@@ -357,9 +352,18 @@
               </script>
               <button class="success submit" type="submit">Enviar</button>
             </form>
+            <div class="row">
+            <div class="medium-12 small-12 columns google-recaptcha">
+              <p class="noCaptcha">
+                <label for="captcha">¿Eres humano?</label>   
+              </p>
+              <div class="g-recaptcha" data-sitekey="6LexvwITAAAAAN9TkOYnlVQo1uggUNnhR8a-mngD" data-callback="onValidate"></div>
+            </div>
           </div>
-          <div class="medium-6 small-12 columns">
-            
+          </div>
+          <div class="medium-6 small-12 columns linkedin center">
+            <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+            <script type="IN/MemberProfile" data-id="http://www.mx.linkedin.com/in/saramuino/en" data-format="inline" data-width="310"></script>
           </div>
       </section>
 
@@ -382,21 +386,13 @@
   </div>
     <div class="bg-mobile hide-for-medium-up"></div>
     <div class="bg-tablet hide-for-small hide-for-large-up"></div>
-    <script type='text/javascript' src="js/vendor/jquery.js"></script>
-    <script type='text/javascript' src="js/foundation.min.js"></script>
-    <script type='text/javascript' src="js/jquery.fancybox.js"></script>
-    <script type='text/javascript' src="js/jquery.fancybox.pack.js"></script>
-    <script type='text/javascript' src="js/jquery.fancybox-buttons.js"></script>
-    <script type='text/javascript' src="js/jquery.fancybox-media.js"></script>
-    <script type='text/javascript' src="js/jquery.fancybox-thumbs.js"></script>
-    <script type='text/javascript' src="js/scripts.js"></script>
-    <script type='text/javascript' src="js/validate.js"></script>
+    <script type='text/javascript' src="js/j.js"></script>
     <script type='text/javascript' src="https://www.google.com/recaptcha/api.js?hl=es"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      })(window,document,'script','//www.muino.net/ga.js','ga');
 
       ga('create', 'UA-49096652-2', 'auto');
       ga('send', 'pageview');
