We are almost there

--- a/sara/index.html
+++ b/sara/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="Arquitecta, Maestra en Arquitectura y Nuevo Urbanismo y Coordinadora de Proyectos Habitacionales Sara Mui&ntilde:o Murga." />
     <title>Arq. Sara Mui&ntilde;o Murga</title>
   
-    <link rel="stylesheet" href="css/s.css">
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>.fancybox-lock{overflow: visible !important;}</style>
 
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
