Changes and adjustments...

--- a/dperros/index.html
+++ b/dperros/index.html
@@ -27,8 +27,8 @@
             <div class="small-6 columns center serv"><a href="#serv" class="menu">Servicios</a></div>
           </div>
           <div class="row">
-            <div class="small-6 columns center cons"><a href="#cons" class="menu">Experiencia</a></div>
-            <div class="small-6 columns center gallery"><a href="#gallery" class="menu">Habilidades</a></div>
+            <div class="small-6 columns center cons"><a href="#cons" class="menu">Consultor</a></div>
+            <div class="small-6 columns center gallery"><a href="#gallery" class="menu">Galer&iacute;a</a></div>
           </div>
           <div class="row">
             <div class="small-12 columns center contact"><a href="#contact" class="menu">Contacto</a></div>
