Adjustments to border menu Sara mobile

--- a/dperros/index.html
+++ b/dperros/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
-    <meta name="ROBOTS" content="INDEX, FOLLOW">
+    <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Estética Canina Móvil. Bañamos a tu perro en la puerta de tu casa con agua calientita. Cepillado para retirar el pelo muerto. Baño con agua caliente. Masaje durante el baño. Texturizado de pelo según la raza. Lavado de dientes (opcional). Limpieza de glándulas peri-anales. Secado rápido. Corte de uñas. Limpieza de oídos. El  arreglo estético acorde a la raza. Adorno y perfume (si es de su agrado)" />
@@ -162,8 +162,7 @@
           </div>
           </div>
           <div class="medium-6 small-12 columns social-share center">
-            <div class="fb-like-box" data-href="https://www.facebook.com/dperros.qro" data-width="300" data-height="300" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="true" data-show-border="true">
-            </div>
+            <iframe src="http://www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2Fdperros.qro&width=300&height=590&colorscheme=light&show_faces=true&header=true&stream=true&show_border=true&appId=360710983981679" frameborder="0"></iframe>
           </div>
       </section>
 
@@ -178,7 +177,6 @@
   </div>
     <div class="bg-mobile hide-for-medium-up"></div>
     <div class="bg-tablet hide-for-small hide-for-large-up"></div>
-    <div id="fb-root"></div>
       
     <script type='text/javascript' src="js/jquery.js"></script>
     <script type='text/javascript' src="js/foundation.min.js"></script>
@@ -196,14 +194,6 @@
 
       ga('create', 'UA-49096652-2', 'auto');
       ga('send', 'pageview');
-    </script>
-    <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=360710983981679&version=v2.0";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
     </script>
   </body>
 </html>
