Fonts fixed for mobile and tablet. Need to investigate why blur is not working on mobile devices

--- a/rodiles-blur-2015/index.html
+++ b/rodiles-blur-2015/index.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="row center mt64" id="presentation">
-        <img src="img/logo.png" alt="Logo Rodiles de M&eacute;xico">
+        <img src="img/logo2.png" alt="Logo Rodiles de M&eacute;xico">
         <p class="simple">Rodiles de M&eacute;xico</p>
     </div>
 
@@ -63,7 +63,7 @@
             <h2>Acerca de Nosotros</h2>
               <h1>Rodiles de M&eacute;xico</h1>
                 <h3>Expertos en Asesor&iacute;a Comercial y Desarrollo Web</h3>
-                    <p>Ponemos a tu disposici&oacute;n m&aacute;s de <span class="counter">115 000</span> horas de experiencia en el Ramo Comercial para crear, mejorar, adaptar o renovar tu fuerza de ventas.</p>
+                    <p>Ponemos a tu disposici&oacute;n m&aacute;s de <span class="counter">160 000</span> horas de experiencia en el Ramo Comercial para crear, mejorar, adaptar o renovar tu fuerza de ventas.</p>
                     <p>Tambi&eacute;n contamos con una s&oacute;lida experienca en desarrollo de sitios web corporativos, tiendas en l&iacute;nea, CV digitales, portafolios de presentaci&oacute;n, restaurantes, etc.</p>
         </div>
 
@@ -73,6 +73,7 @@
 
         <div class="row" id="skills">
             <h3>Formamos equipos de venta de clase mundial.</h3>
+            <h3>Organizaci&oacute;n de ambientes sanos de trabajo.</h3>
 
             <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce et porttitor urna. Nunc fermentum enim elit, eget viverra libero posuere id. Donec ac ultricies ante, non feugiat enim. Duis est nibh, gravida non arcu eu, consectetur tempor sapien. Fusce blandit nunc porta sem porttitor, ut ultrices dolor porttitor. Integer tempus commodo viverra. In ornare, nulla non cursus malesuada, nibh orci efficitur sem, at molestie leo arcu et urna. Suspendisse sed ipsum at nunc imperdiet scelerisque.</p>
 
@@ -143,7 +144,7 @@
         </div>
 
         <div class="row" id="ksimple">
-            <p class="ksimple">Cont&aacute;ctanos</p>
+            <p class="ksimple">Contacto</p>
         </div>
 
         <div class="row" id="contact">
