--- a/rodiles-blur-2015/index.html
+++ b/rodiles-blur-2015/index.html
@@ -25,7 +25,7 @@
 
     <div class="row">
       <div class="fixed center visible-xs">
-        <button class="menuB">☰</button>
+        <input class="menuB" type="image" src="img/menu-B.png"></input>
           <nav>
             <ul>
               <li><a href="#me">Nosotros</a></li>
