Images and changes to blur technique

--- a/rodiles-blur-2015/index.html
+++ b/rodiles-blur-2015/index.html
@@ -216,7 +216,7 @@
     <script type='text/javascript' src="vendor/jquery-2.1.1.min.js"></script>
     <!--<![endif]-->
     <script type='text/javascript' src="responsive.min.js"></script>
-    <script type='text/javascript' src="blur.js"></script>
+    <!--<script type='text/javascript' src="blur.js"></script>-->
     <script type='text/javascript' src="scripts.js"></script>
     <script type='text/javascript' src="validate.js"></script>
     <script type='text/javascript' src="https://www.google.com/recaptcha/api.js?es"></script>
