--- a/rodiles-blur-2015/index.html
+++ b/rodiles-blur-2015/index.html
@@ -26,7 +26,11 @@
 
     <div class="row">
       <div class="fixed center visible-xs">
-        <input class="menuB" type="image" src="img/menu-B.png"></input>
+        <a class="btn-animated-lg">
+            <span class="one"></span>
+            <span class="two"></span>
+        </a>
+        <!--<input class="menuB" type="image" src="img/menu-B.png"></input>-->
           <nav>
             <ul>
               <li><a href="#me">Nosotros</a></li>
@@ -56,11 +60,15 @@
     <div class="row center mt64" id="presentation">
         <img src="img/logo2.png" alt="Logo Rodiles de M&eacute;xico">
         <p class="simple">Rodiles de M&eacute;xico</p>
+        <a class="arrow-wrap" href="#me">
+            <span class="arrow"></span>
+            <!--<span class="hint">scroll</span>-->
+        </a>
     </div>
 
     <div id="main">
-
         <div class="row" id="me">
+            
             <h2>Acerca de Nosotros</h2>
               <h1>Rodiles de M&eacute;xico</h1>
                 <h3>Expertos en Asesor&iacute;a Comercial y Desarrollo Web</h3>
